# ovad

./: .gitignore  README.md  pyproject.toml
ovad/: commons.py
tests/: test_commons.py
