[tool.poetry]
name = "ovad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.group.test]

[tool.poetry.dependencies]
python = "^3.10"
[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

